# testmesoninterdep

./: meson.build  testmesoninterdep.c
subprojects/proj1/: meson.build
subprojects/proj2/: meson.build  proj2.c
